--- a/printed.html
+++ b/printed.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -277,7 +276,7 @@ header.textContent += ` — [${displayName}]`;
         startElapsedTimer(timerId, timeObj);
       });
 
-      startAutoScroll();
+      
     }
 
     function startElapsedTimer(timerId, timeObj) {
@@ -328,8 +327,12 @@ header.textContent += ` — [${displayName}]`;
     }
 
 
-    setInterval(fetchInvoices, 30000);
-    fetchInvoices();
+    /* Auto-refresh every 30 seconds */
+   setInterval(fetchInvoices, 30000);
+
+  // Initial load + start scroll only once
+  fetchInvoices().then(() => startAutoScroll());
+
   </script>
 
 </body>
