--- a/confirmationReport.html
+++ b/confirmationReport.html
@@ -66,8 +66,6 @@
 <body>
 
 <h1>Confirmer Performance Report</h1>
-<p id="lastUpdated">Last updated: --</p>
-
 <div class="table-container">
     <table>
         <thead>
@@ -86,6 +84,10 @@
     </table>
 </div>
 
+<div class="footer">
+    Last updated: <span id="lastUpdated"></span>
+    <div>Designed and Managed by MIS.DPT</div>
+  </div>
 <script src="config.js"></script>
 
 <script>
