Fix case sensitivity in confirmation report URL

--- a/reports.html
+++ b/reports.html
@@ -47,7 +47,7 @@
 
   // Build iframe URLs with branch preserved
   const storeURL = `storeReports.html?branch=${branch}`;
-  const confURL = `ConfirmationReport.html?branch=${branch}`;
+  const confURL = `confirmationReport.html?branch=${branch}`;
 
   // Load the dashboards
   document.getElementById("iframe1").src = storeURL;
