--- a/storeReports.html
+++ b/storeReports.html
@@ -6,9 +6,14 @@
 <style>
     body {
         font-family: Arial, sans-serif;
+        font-weight: bolder;
         background: #f4f6f9;
         margin: 0;
         padding: 0;
+        display: flex;
+        flex-direction: column;
+        min-height: 100vh;
+        overflow: hidden; /* Prevent double scrollbars */
     }
     h1 {
         text-align: center;
