--- a/storeReports.html
+++ b/storeReports.html
@@ -23,6 +23,14 @@
         margin: 0;
     }
 
+    #clock {
+        text-align: center;
+        font-size: 1.6rem;
+        font-weight: bold;
+        margin: 10px 0 20px;
+        color: #2c3e50;
+    }
+
     .table-container {
         height: 85vh;
         overflow-y: auto;
